Long titles fixed with overflow ellipsis + completing migration to css vars

--- a/frontend/src/global_styles/layout/_top_menu.sass
+++ b/frontend/src/global_styles/layout/_top_menu.sass
@@ -26,9 +26,6 @@
 // See docs/COPYRIGHT.rdoc for more details.
 //++
 
-$hamburger-right: -3px
-$hamburger-width: 50px
-
 %top-menu-hover-styles
   background: var(--header-item-bg-hover-color)
   color: var(--header-item-font-hover-color)
